# linkedin_mining

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  publish-gh-pages.yml
app/: __init__.py  analytics.py  db.py  imports.py  main.py  profiles.py  search.py
app/static/: app.js  style.css
app/templates/: base.html  index.html  project.html
assets/: demo.js
compliant_talent_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: index.html
docs/assets/: style.css
docs/superpowers/plans/: 2026-07-14-linkedin-talent-mining.md
docs/superpowers/specs/: 2026-07-14-linkedin-talent-mining-design.md
sample_data/: okx_profiles.csv
tests/: conftest.py  test_analytics.py  test_api.py  test_db.py  test_imports.py  test_profiles.py  test_search.py  test_web.py
